kickseed (0.39) UNRELEASED; urgency=low

  * test-kickseed: Explicitly source kickseed.sh from current directory.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 22 Sep 2006 16:17:11 +0100

kickseed (0.38) edgy; urgency=low

  * Allow Kickstart commands and arguments to be separated by tabs as well
    as spaces (closes: Malone #49438).

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 23 Aug 2006 08:47:26 +0100

kickseed (0.37) edgy; urgency=low

  * Update %packages preseeding for pkgsel 0.07ubuntu1 (revive-tasksel).
    Issue a warning if exclusions are used, since they are no longer
    supported.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 26 Jul 2006 14:06:02 +0100

kickseed (0.36) edgy; urgency=low

  * Upload changes from dapper-updates to edgy.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 10 Jul 2006 17:22:25 +0100

kickseed (0.35.2) dapper-updates; urgency=low

  [Colin Watson]
  * Don't run kickseed_post in test-kickseed.

  [Scott James Remnant]
  * Fix passwd/root-login preseeding harder; additional instance of the
    fix for #48038.

 -- Scott James Remnant <scott@ubuntu.com>  Sun, 11 Jun 2006 17:22:59 +0100

kickseed (0.35.1) dapper-updates; urgency=low

  * Fix passwd/root-login preseeding (closes: Malone #48038).

 -- Colin Watson <cjwatson@ubuntu.com>  Mon,  5 Jun 2006 02:22:10 +0100

kickseed (0.35) dapper; urgency=low

  * Preseed passwd/root-login depending on whether the root password is
    disabled, to cope with user-setup 1.1.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 15 May 2006 15:08:53 +0100

kickseed (0.34) dapper; urgency=low

  * setup/hd: Install disk-detect rather than hw-detect-full.
  * Adapt %packages handling to pkgsel.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 12 Jan 2006 22:50:32 +0000

kickseed (0.33) dapper; urgency=low

  * Fix %packages handling to account for names in aptitude patterns really
    being unanchored regular expressions.
  * Update crypted user and root password handling for passwd 1:4.0.13-5.