@@ -1,6 +1,9 @@
 kickseed (0.39) UNRELEASED; urgency=low
 
   * test-kickseed: Explicitly source kickseed.sh from current directory.
+  * Update keyboard handling for console-setup; note that keymap names have
+    changed from Dapper and earlier, and that layout_variant (e.g. in_guj)
+    keymap names may be used (closes: Malone #61573).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Fri, 22 Sep 2006 16:17:11 +0100
 
